; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_ibmebus.c_ibmebus_create_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_ibmebus.c_ibmebus_create_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.of_device = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__, i32* }
%struct.TYPE_3__ = type { i32* }

@ibmebus_bus_device = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ibmebus_bus_type = common dso_local global i32 0, align 4
@ibmebus_dma_ops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device_node*)* @ibmebus_create_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ibmebus_create_device(%struct.device_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca %struct.of_device*, align 8
  %5 = alloca i32, align 4
  store %struct.device_node* %0, %struct.device_node** %3, align 8
  %6 = load %struct.device_node*, %struct.device_node** %3, align 8
  %7 = call %struct.of_device* @of_device_alloc(%struct.device_node* %6, i32* null, i32* @ibmebus_bus_device)
  store %struct.of_device* %7, %struct.of_device** %4, align 8
  %8 = load %struct.of_device*, %struct.of_device** %4, align 8
  %9 = icmp ne %struct.of_device* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @ENOMEM, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %2, align 4
  br label %30

13:                                               ; preds = %1
  %14 = load %struct.of_device*, %struct.of_device** %4, align 8
  %15 = getelementptr inbounds %struct.of_device, %struct.of_device* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  store i32* @ibmebus_bus_type, i32** %16, align 8
  %17 = load %struct.of_device*, %struct.of_device** %4, align 8
  %18 = getelementptr inbounds %struct.of_device, %struct.of_device* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  store i32* @ibmebus_dma_ops, i32** %20, align 8
  %21 = load %struct.of_device*, %struct.of_device** %4, align 8
  %22 = call i32 @of_device_register(%struct.of_device* %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %13
  %26 = load %struct.of_device*, %struct.of_device** %4, align 8
  %27 = call i32 @of_device_free(%struct.of_device* %26)
  %28 = load i32, i32* %5, align 4
  store i32 %28, i32* %2, align 4
  br label %30

29:                                               ; preds = %13
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %25, %10
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local %struct.of_device* @of_device_alloc(%struct.device_node*, i32*, i32*) #1

declare dso_local i32 @of_device_register(%struct.of_device*) #1

declare dso_local i32 @of_device_free(%struct.of_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
